2025-10-07T00:51:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18298669482 # 789
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-07
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 650 1044 / 665 1059
* notice: next accum: outdated-unq outdated-all / unq all: 652 1046 / 666 1060
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-22] / [2025-10-06]

2025-10-06T00:52:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18266892062 # 788
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-06
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 648 1042 / 664 1058
* notice: next accum: outdated-unq outdated-all / unq all: 650 1044 / 665 1059
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-21] / [2025-10-05]

2025-10-05T00:56:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18251759766 # 787
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-05
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 647 1041 / 663 1057
* notice: next accum: outdated-unq outdated-all / unq all: 648 1042 / 664 1058
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-20] / [2025-10-04]

2025-10-04T00:47:28Z: