@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-07T00:51:49Z",
+  "timestamp" : "2025-10-08T00:51:19Z",
   "count_outdated" : 1046,
   "uniques_outdated" : 652,
-  "count" : 1060,
-  "uniques" : 666,
+  "count" : 1061,
+  "uniques" : 667,
   "clones" : [
     {
       "timestamp": "2025-09-24T00:00:00Z",
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2025-10-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
