@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 4,
+  "count": 15,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2025-09-24T00:00:00Z",
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2025-10-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-07T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
