@@ -1,3 +1,12 @@
+2025-10-08T00:51:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18330339694 # 790
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-08
+* notice: last 14d: unq all: 5 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 652 1046 / 666 1060
+* notice: next accum: outdated-unq outdated-all / unq all: 652 1046 / 667 1061
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-10-07]
+
 2025-10-07T00:51:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18298669482 # 789
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-07
